tests/machine/x/c/tree_sum.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/tree_sum.c:27:3: error: conflicting types for ‘Leaf’; have ‘struct <anonymous>’
   27 | } Leaf;
      |   ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:23:21: note: previous declaration of ‘Leaf’ with type ‘Leaf’
   23 | typedef struct Leaf Leaf;
      |                     ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:29:8: error: field ‘left’ has incomplete type
   29 |   Tree left;
      |        ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:31:8: error: field ‘right’ has incomplete type
   31 |   Tree right;
      |        ^~~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:32:3: error: conflicting types for ‘Node’; have ‘struct <anonymous>’
   32 | } Node;
      |   ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:24:21: note: previous declaration of ‘Node’ with type ‘Node’
   24 | typedef struct Node Node;
      |                     ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:39:3: error: conflicting types for ‘Tree’; have ‘struct <anonymous>’
   39 | } Tree;
      |   ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:22:21: note: previous declaration of ‘Tree’ with type ‘Tree’
   22 | typedef struct Tree Tree;
      |                     ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c: In function ‘sum_tree’:
/workspace/mochi/tests/machine/x/c/tree_sum.c:42:16: error: expected expression before ‘Leaf’
   42 |   return (t == Leaf ? 0
      |                ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/tree_sum.c:49:26: error: expected expression before ‘Leaf’
   49 |   int t = (Node){.left = Leaf,
      |                          ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:52:27: error: incompatible type for argument 1 of ‘sum_tree’
   52 |   printf("%d\n", sum_tree(t));
      |                           ^
      |                           |
      |                           int
/workspace/mochi/tests/machine/x/c/tree_sum.c:41:19: note: expected ‘Tree’ but argument is of type ‘int’
   41 | int sum_tree(Tree t) {
      |              ~~~~~^

   1: #include <stdio.h>
